# four

./: .ghcid  .gitignore  LICENSE  Makefile  README.md  build-zip.sh  cabal-ghcjs.project  cabal.project  default.nix
game/: Main.hs  Style.hs  four.cabal  style.css
