cabal-version:       2.0

name:                four
version:             0.1.0.0
synopsis:            A "puzzle" "game" created for the Not A Game Jam Game Jam
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Joshua Price
maintainer:          joshprice247@gmail.com
copyright:           Copyright (c) 2019, Joshua Price
category:            Game
build-type:          Simple
extra-source-files:  style.css

executable four
  main-is:             Main.hs
  other-modules:       Style
  -- other-extensions:
  build-depends:       base
                     , reflex-dom
                     , jsaddle
                     , text
                     , distributive
                     , adjunctions
                     , clay
  default-language:    Haskell2010
  ghc-options:         -Wall
