cabal-version:       2.0

name:                four
version:             0.1.0.0
synopsis:            A "puzzle" "game" created for the Not A Game Jam Game Jam
description:         Something approaching a 2048-esque puzzle game, but not
                     quite achieving the "puzzle" or even the "game" part.
bug-reports:         https://github.com/ElderEphemera/four/issues
license:             BSD3
license-file:        LICENSE
author:              Joshua Price
maintainer:          joshprice247@gmail.com
copyright:           Copyright (c) 2019, Joshua Price
category:            Game
build-type:          Simple

executable four
  main-is:             Main.hs
  other-modules:       Style
  -- other-extensions:
  build-depends:       base
                     , reflex-dom
                     , jsaddle
                     , text
                     , distributive
                     , adjunctions
                     , clay
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2
